# mangoAgent

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  install.sh  pyproject.toml  requirements.txt  run.py  开发指南.md  项目总结文档.md
doc/: 项目结构图.md
doc/media/: media2gif.sh
showcase/snake-game/: README.md  game.js  index.html  style.css
src/mangoAgent/: __main__.py  config.py
src/mangoAgent/core/: agent.py  background_manager.py  context_manager.py  event_bus.py  memory_manager.py  message_bus.py  skill_manager.py  subagent.py  task_manager.py  teammate_manager.py  todo_manager.py  worktree_manager.py
src/mangoAgent/skills/code_review/: SKILL.md
src/mangoAgent/skills/git_workflow/: SKILL.md
src/mangoAgent/skills/pdf_generation/: INSTALL.md  SKILL.md  requirements.txt
src/mangoAgent/skills/pdf_generation/scripts/: chinese_pdf_generator.py  example_usage.py  quick_test.py  simple_verify.py
src/mangoAgent/tools/: background_tools.py  base.py  memory_tools.py  misc_tools.py  skill_tools.py  subagent_tools.py  task_tools.py  team_tools.py  worktree_tools.py
src/mangoAgent/utils/: fs.py  logger.py  tui.py
